--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.43.0",
     "@prisma/client": "^5.11.0",
     "@types/pg": "^8.16.0",
     "cors": "^2.8.6",
